--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
             <img src="images/project2.png" alt="Project 2"></a> 
         </div>
         <div class="project">
-            <h3>Project 3: Calculator</h3>
+            <h3>Project 3: Stopwatch</h3>
             <p>A simple Stopwatch built using HTML, CSS, and JavaScript.</p><br>
             <p class="paragraph"> click on the picture below to test this project :</p>
             <a href="https://rachidaamourak.github.io/Stopwatch-project/">
             <img src="images/project3.png" alt="Project 3">   </a>
         </div>
         <div class="project">
-            <h3>Project 4: Calculator</h3>
+            <h3>Project 4: Dice-Roller</h3>
             <p>A simple Dice Roller program built using HTML, CSS, and JavaScript.</p><br>
             <p class="paragraph"> click on the picture below to test this project :</p>
             <a href="https://rachidaamourak.github.io/Dice-Roller-project/">
             <img src="images/project4.png" alt="Project 4"></a>
         </div>
         <div class="project">
-            <h3>Project 5: Calculator</h3>
+            <h3>Project 5: Temperature Conversion Program</h3>
             <p>A simple Temperature Conversion Program built using HTML, CSS, and JavaScript.</p><br>
             <p class="paragraph"> click on the picture below to test this project :</p>
             <a href="https://rachidaamourak.github.io/temperature-conversion-program/">
