--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
             <a href="https://rachidaamourak.github.io/temperature-conversion-program/">
             <img src="images/project5.png" alt="Project 5"></a>
         </div>
+        <div class="project">
+            <h3>Project 6: Digital clock</h3>
+            <p>A simple Digital Clock Program built using HTML, CSS, and JavaScript.</p><br>
+            <p class="paragraph"> click on the picture below to test this project :</p>
+            <a href="https://rachidaamourak.github.io/Digital-Clock/">
+            <img src="images/project6.png" alt="Project 6"></a>
+        </div>
     </section>
 
     <!-- Resume Section -->
